# learn-opengl

./: .editorconfig  CMakeLists.txt
src/: 10_camera.cpp  11_colors.cpp  12_lighting_maps.cpp  13_assimp.cpp  14_multiple_lights.cpp  15_assimp.cpp  2_double_triangle.cpp  3_double_triangle_multiple_VAO.cpp  4_double_triangle_different_color.cpp  5_uniform_dynamic_color.cpp  6_shaders.cpp  7_textures.cpp  8_transformations.cpp  main.cpp  rectangle.cpp
src/1_getting_started/: 10_camera.cpp  1_rectangle.cpp  2_double_triangle.cpp  3_double_triangle_multiple_VAO.cpp  4_double_triangle_different_color.cpp  5_uniform_dynamic_color.cpp  6_shaders.cpp  7_textures.cpp  8_transformations.cpp  9_coordinate_system.cpp
src/2_lighting/: 1_colors.cpp  2_lighting_maps.cpp  3_lighting_caster__directional_light.cpp  3_lighting_caster__point_light.cpp  3_lighting_caster__spotlight.cpp  4_multiple_lights.cpp
src/3_advanced_opengl/: 0_imgui.cpp  10_0_geometry_shader.cpp  10_1_geometry_shader__exploding_object.cpp  10_2_geometry_shader__visualizing_normal_vec.cpp  11_0_instancing.cpp  11_1_instancing_asteroids.cpp  1_assimp.cpp  2_depth_testing.cpp  3_stencil_testing.cpp  4_discard_fragments.cpp  5_blending.cpp  6_face_culling.cpp  7_framebuffers.cpp  8_0_cubemaps.cpp  8_1_cubemaps_reflection.cpp  8_2_cubemaps_refraction.cpp  9_advanced_glsl__uniform_buffers.cpp
src/include/: camera.hpp  material.hpp  mesh.hpp  model.hpp  shader.hpp
src/shaders/: 11_object_shader.frag  11_shader.vert  12_object_shader.frag  13_object_shader_directional_light.frag  13_object_shader_point_light.frag  13_object_shader_spotlight.frag  13_shader.vert  14_object_shader.frag  16_shader.frag  16_shader.vert  17_shader-white.frag  17_shader.frag  18_shader.frag  19_screen_shader.frag  19_screen_shader.vert  20_shader.frag  20_shader.vert  20_shader_refraction.frag  20_skybox_shader.vert  21_shader.vert  22_shader.frag  22_shader.geom  22_shader.vert  22_shader_model.vert  22_shader_visualize_normal.geom  22_shader_visualize_normal.vert  23_shader.frag  23_shader.vert  23_shader_asteroid.vert  6_shader.frag  6_shader.vert  7_shader.frag  7_shader.vert  8_shader.frag  8_shader.vert  9_shader.frag  9_shader.vert
